feat: threshold-based email alerts for expiring contracts
Replace daily spam (one email/day for all contracts in 30-day window)
with targeted notifications sent exactly at 30, 14, 7 and 1 day(s)
before expiry. Each threshold uses a dedicated DB query (findByStatusAndEndDate)
and produces an urgency-differentiated subject line:
- 30/14 days: warning (amber)
- 7 days: urgent (orange)
- 1 day: final notice (red)

826 tests OK.